--- a/overview/core-architecture-concepts/architecture-overview.mdx
+++ b/overview/core-architecture-concepts/architecture-overview.mdx
@@ -1,155 +1,136 @@
 ---
-title: "System Architecture Overview"
-description: "Illustrates the high-level architecture of GoogleTest and GoogleMock, their relationship, and principal building blocks. Includes a mermaid diagram showing the interplay between test code, mock components, assertion layers, and test runners."
+title: "System Architecture"
+description: "Understand the architecture of GoogleTest, including how tests are structured, discovered, and executed. Explore the relationship between test macros, test runners, and integration with C++ build workflows. A mermaid diagram illustrates key components and their interactions."
 ---
 
-# System Architecture Overview
+# System Architecture
 
-## Understanding the High-Level Structure of GoogleTest and GoogleMock
+## Overview
 
-This chapter provides a comprehensive illustration of the high-level architecture of GoogleTest and GoogleMock. Whether you are new to this powerful testing framework or looking to deepen your understanding, this overview clarifies how core components interact to support effective unit testing in C++.
+The System Architecture page provides a clear understanding of how GoogleTest structures, discovers, and executes tests. This foundational knowledge helps users appreciate the seamless integration of GoogleTest into their C++ development workflows and how tests interact internally during execution.
+
+## Core Purpose
+
+GoogleTest is designed to organize and run tests efficiently in C++ projects. This page details the components involved—from test macros that users write, through the test runners that schedule and execute these tests, to how GoogleTest integrates with build workflows and environments.
+
+Understanding this architecture is crucial for anyone who wants to write reliable tests, troubleshoot test execution issues, or customize their integration for CI/CD pipelines.
 
 ---
 
-### What Is This Page About?
+## Key Components and Workflow
 
-This page visualizes and explains the principal building blocks that compose GoogleTest and GoogleMock and highlights their relationship. You'll discover the flow between your test code, mock components, assertion layers, and test runners, all integrated to deliver seamless, robust test executions.
+At its core, GoogleTest involves several key components working together:
+
+- **Test Macros:** These are user-facing macros such as `TEST` and `TEST_F` which define test cases and test fixtures.
+- **Test Runner:** The engine that discovers all tests registered via macros and orchestrates their execution.
+- **Test Cases and Suites:** Logical groupings of tests that allow for organization and selective running.
+- **Integration Hooks:** Interfaces and mechanisms that enable GoogleTest to work seamlessly with build tools, IDEs, and continuous integration systems.
+
+The typical test execution flow is:
+
+1. **Test Registration:** When the test binary starts, all registered tests from macros are collected.
+2. **Test Discovery:** The test runner identifies available tests, their grouping, and metadata.
+3. **Test Execution:** Tests are run sequentially (or in parallel as configured), respecting any dependencies or order constraints.
+4. **Reporting:** After execution, results are compiled and reported in formats compatible with CI tools or for human consumption.
 
 ---
 
-### Core Architecture
-
-GoogleTest and GoogleMock work collaboratively to provide expressive and verifiable testing capabilities for C++ codebases. At a high level, the system architecture can be viewed as the interplay between several key components:
-
-- **Test Code:** Your actual C++ test cases, written with GoogleTest macros and gMock expectations.
-- **Mock Objects:** Simulated versions of dependencies created via GoogleMock, enabling interaction-based tests.
-- **Assertion Layer:** Validates the outcomes and expectations encoded in your tests.
-- **Test Runner:** The engine that discovers, executes, and reports results on your tests.
-
-The flow begins with your test code making calls to mocks or real production code, assertions evaluate those interactions and results, and the test runner organizes the execution while presenting clear output.
-
-
-
-### Component Details & Interaction Flow
-
-| Component       | Role                                   | Benefits to User                      |
-|-----------------|--------------------------------------|-------------------------------------|
-| Test Code       | Defines test cases and mock setups   | Enables focused, maintainable tests |
-| Mock Objects    | Substitute dependencies with controllable behavior | Isolate components under test, enable verification of interactions |
-| Assertion Layer | Validates whether tests pass or fail | Provides clear feedback on correctness |
-| Test Runner     | Manages test discovery and execution | Simplifies running tests and analyzing results |
-
-
-
-### Visual Overview
+## Visual Architecture Diagram
 
 ```mermaid
 flowchart TD
+  %% User writes tests using macros
+  UserTestCode[Test Macros: TEST, TEST_F, TEST_P]
 
-  TestCode["Test Code"] --> MockObjects["Mock Objects"]
-  TestCode --> ProductionCode["Production Code"]
-  MockObjects --> AssertionLayer["Assertion Layer"]
-  ProductionCode --> AssertionLayer
-  AssertionLayer --> TestRunner["Test Runner"]
-  TestRunner --> TestCode
+  %% Test registration stage
+  Registration[Test Registration]
 
-  subgraph "GoogleMock Core"
-    MockObjects
-    AssertionLayer
+  %% Test runner orchestrates execution
+  Runner[Test Runner]
+
+  %% Test cases and suites
+  TestCases[Test Cases & Suites]
+
+  %% Reporting outputs
+  Reporting[Test Result Reporting]
+
+  %% Integration with build and IDE
+  BuildIntegration[Build System & IDE Integration]
+
+  UserTestCode --> Registration
+  Registration --> Runner
+  Runner --> TestCases
+  Runner --> Reporting
+  Runner --> BuildIntegration
+
+  %% Details of main interactions
+  subgraph "Test Execution"
+    Runner -->|Runs| TestCases
   end
 
-  subgraph "GoogleTest Core"
-    AssertionLayer
-    TestRunner
-  end
+  style UserTestCode fill:#cfe2f3,stroke:#2f75b5,stroke-width:2px
+  style Registration fill:#e2efda,stroke:#4b830d,stroke-width:2px
+  style Runner fill:#fff2cc,stroke:#bf9000,stroke-width:2px
+  style TestCases fill:#d9d2e9,stroke:#6e62b1,stroke-width:2px
+  style Reporting fill:#f4cccc,stroke:#a61c1c,stroke-width:2px
+  style BuildIntegration fill:#d0e0e3,stroke:#13564e,stroke-width:2px
 
-  style TestCode fill:#d0f0c0,stroke:#333,stroke-width:2px
-  style ProductionCode fill:#f9f,stroke:#333,stroke-width:2px
-  style MockObjects fill:#b0c4de,stroke:#333,stroke-width:1.5px
-  style AssertionLayer fill:#fdd,stroke:#333,stroke-width:1.5px
-  style TestRunner fill:#ffe4c4,stroke:#333,stroke-width:1.5px
+  %% Annotations
+  classDef component fill:#f8f9fa,stroke:#444,stroke-width:1px;
+  class UserTestCode,Registration,Runner,TestCases,Reporting,BuildIntegration component;
 ```
 
-
-
-### How It Works Together — User Flow
-
-1. **Writing Tests:** You write test cases using GoogleTest macros (`TEST`, `TEST_F`) and create mock objects with GoogleMock.
-
-2. **Setting Expectations:** Mocks have method expectations (`EXPECT_CALL`) set, defining how they should be called.
-
-3. **Test Execution:** The test runner finds tests and executes them. It directs calls to real or mock objects.
-
-4. **Verification:** Mock method calls are verified at runtime and on test teardown, ensuring expectations are met.
-
-5. **Result Reporting:** Assertion outcomes, including failures or successes, are communicated through the test runner.
-
-
-
-### Practical Example
-
-Suppose you're testing a class `UserManager` that depends on an `EmailService`. You create a mock `MockEmailService` and set expectations like:
-
-```cpp
-EXPECT_CALL(mock_email_service, SendEmail(_, _)).Times(1);
-```
-
-When `UserManager` executes your test scenario, its calls to `EmailService` actually invoke the mock object. GoogleMock verifies the calls happened as expected. GoogleTest’s assertion layer evaluates the test success, and the test runner reports the result.
+*This diagram illustrates the linear but modular flow from test definitions in source code to discovery, execution by the test runner, and finally to reporting and integration.*
 
 ---
 
-### Key Benefits of This Architecture
+## Real-World Scenario: Running Your First Test
 
-- **Separation of Concerns:** Cleanly separates test code, mocks, assertions, and execution control.
-- **Enhanced Test Control:** Allows fine-grained control over mock behavior and precise verification.
-- **Extensibility:** The modular components make it easy to extend mocking and testing capabilities.
-- **Robust Feedback:** Clear error reporting aids rapid identification of issues.
+Imagine you have written a basic test using the `TEST` macro. Here's what happens:
 
----
+1. The test macro registers the test during static initialization of your test binary.
+2. When you run the test executable, the test runner gathers all registered tests, including yours.
+3. The runner executes your test within the organized test case.
+4. Results are printed on the terminal or reported back to your IDE.
 
-### Tips for Working with GoogleTest and GoogleMock Architecture
-
-- Always define mocks for interfaces or abstract classes and use `MOCK_METHOD` macros in public section.
-- Set expectations early with `EXPECT_CALL` before exercising tested code to avoid undefined behaviors.
-- Use sequences (`InSequence`) or `After` clauses to enforce ordering in complex interactions.
-- Combine GoogleTest assertions with GoogleMock expectations for comprehensive test coverage.
-- Leverage `NiceMock`, `StrictMock`, and `NaggyMock` wrappers to control warning verbosity about uninteresting calls.
+This process is fully automated, letting you focus on test logic rather than test management.
 
 ---
 
-### Troubleshooting Common Architecture Issues
+## Integration with C++ Build Workflows
 
-- **Mock Methods Not Called:** Ensure expectations are set before invocation and mock methods are declared `virtual`.
-- **Unexpected Calls on Mocks:** Check if `EXPECT_CALL` matchers accurately reflect argument expectations.
-- **Test Runner Can't Discover Tests:** Verify correct use of GoogleTest test macros and that links are set up properly.
+GoogleTest is designed to fit nicely into your existing C++ build and development process:
 
----
+- **Test discovery happens at runtime, no build-time code generation is needed.**
+- **Test runners can be invoked via command line or IDE actions.**
+- **GoogleTest supports parallel test execution and filtering via command-line flags, aiding integration with CI/CD pipelines.**
 
-### Next Steps
-
-Proceed to explore the [Core Concepts & Terminology](/overview/core-architecture-concepts/core-concepts-terminology) page to deepen your understanding of unit testing principles and terminology used throughout GoogleTest and GoogleMock.
-
-For practical usage, visit the [Getting Started & Next Steps](/overview/integration-getting-started/getting-started-next-steps) to begin writing and running your first tests.
-
-Additionally, check out the [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html) for detailed examples and recipes on mock usage.
+This ensures that whether you use CMake, Bazel, or plain Makefiles, you can run tests in a manner that suits your environment.
 
 ---
 
-## Summary
-- This page provides a high-level architectural overview of how GoogleTest and GoogleMock interact to enable effective C++ testing.
-- It covers the primary building blocks — Test Code, Mock Objects, Assertion Layer, and Test Runner — and explains their interplay.
-- Visual Mermaid diagram illustrates the flow between components.
-- Emphasizes user workflow for writing tests, setting expectations, execution, and verification.
-- Offers practical tips, common troubleshooting advice, and pointers to related documentation.
+## Practical Tips and Best Practices
+
+- Always include descriptive names in your test macros so that discovery and reporting are meaningful.
+- Familiarize yourself with test filtering options (`--gtest_filter`) to target specific tests.
+- Use test fixtures (`TEST_F`) to group related tests and share setup/teardown logic.
+- For large test suites, consider organizing tests into suites logically reflecting your code base.
+- Leverage verbose output (`--gtest_verbose`) in CI to better diagnose test failures.
 
 ---
 
-## References
-- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html)
-- [Core Concepts & Terminology](/overview/core-architecture-concepts/core-concepts-terminology)
-- [Getting Started & Next Steps](/overview/integration-getting-started/getting-started-next-steps)
-- [Mocking Reference](https://google.github.io/googletest/reference/mocking.html)
+## Troubleshooting Common Issues
+
+- If tests are not discovered, verify that the test macros are correctly used and linked.
+- Unexpected test execution order? Use `InSequence` and other ordering features if needed (see mocking docs).
+- Integration problems with IDE or build system usually arise from misconfiguration—ensure test binaries are built with GoogleTest and linked properly.
 
 ---
 
-For full details and additional context, consult the other chapters in the GoogleTest documentation suite.
+## Next Steps
+
+- To start writing tests, visit [GoogleTest Primer](https://google.github.io/googletest/primer.html) and [Writing Your First Test](https://google.github.io/googletest/gtest-getting-started.html).
+- For details on mocking, see [Mocking with GoogleMock](https://google.github.io/googletest/gmock_for_dummies.html) and the relevant cookbook.
+- Explore [Running and Configuring Tests](https://google.github.io/googletest/api/gtest_core.html#running-and-configuring-tests) for fine-tuning test execution.
+
+<Source url="https://github.com/google/googletest" paths={[{"path": "googlemock/test/gmock-nice-strict_test.cc", "range": "1-632"},{"path": "googlemock/test/gmock-spec-builders_test.cc", "range": "1-637"}]} />
